@@ -1,0 +1,1 @@
+./cifparse: file 'tests/cifparse_150.inp' OK
