@@ -1,0 +1,14 @@
+#\#CIF_2.0
+data_block
+
+save_not_empty_1
+_item_1     value_1
+save_
+
+save_empty
+
+save_
+
+save_not_empty_2
+_item_2     value_2
+save_
