@@ -1,0 +1,79 @@
+$VAR1 = [
+          {
+            'cifversion' => {
+                              'major' => 2,
+                              'minor' => 0
+                            },
+            'inloop' => {},
+            'loops' => [],
+            'name' => 'block',
+            'precisions' => {},
+            'save_blocks' => [
+                               {
+                                 'cifversion' => {
+                                                   'major' => 2,
+                                                   'minor' => 0
+                                                 },
+                                 'inloop' => {},
+                                 'loops' => [],
+                                 'name' => 'not_empty_1',
+                                 'precisions' => {},
+                                 'save_blocks' => [],
+                                 'tags' => [
+                                             '_item_1'
+                                           ],
+                                 'types' => {
+                                              '_item_1' => [
+                                                             'UQSTRING'
+                                                           ]
+                                            },
+                                 'values' => {
+                                               '_item_1' => [
+                                                              'value_1'
+                                                            ]
+                                             }
+                               },
+                               {
+                                 'cifversion' => {
+                                                   'major' => 2,
+                                                   'minor' => 0
+                                                 },
+                                 'inloop' => {},
+                                 'loops' => [],
+                                 'name' => 'empty',
+                                 'precisions' => {},
+                                 'save_blocks' => [],
+                                 'tags' => [],
+                                 'types' => {},
+                                 'values' => {}
+                               },
+                               {
+                                 'cifversion' => {
+                                                   'major' => 2,
+                                                   'minor' => 0
+                                                 },
+                                 'inloop' => {},
+                                 'loops' => [],
+                                 'name' => 'not_empty_2',
+                                 'precisions' => {},
+                                 'save_blocks' => [],
+                                 'tags' => [
+                                             '_item_2'
+                                           ],
+                                 'types' => {
+                                              '_item_2' => [
+                                                             'UQSTRING'
+                                                           ]
+                                            },
+                                 'values' => {
+                                               '_item_2' => [
+                                                              'value_2'
+                                                            ]
+                                             }
+                               }
+                             ],
+            'tags' => [],
+            'types' => {},
+            'values' => {}
+          }
+        ];
