@@ -1,0 +1,4 @@
+tests/scripts/cif_parser_test: tests/cases/cif_parser_test_131.inp(1): WARNING, file is recognised as CIF v2.0 which is currently not supported by COD&colon;&colon;CIF&colon;&colon;Parser&colon;&colon;Yapp -- treating as CIF v1.1 instead.
+tests/scripts/cif_parser_test: tests/cases/cif_parser_test_131.inp(10,1) data_block: ERROR, incorrect CIF syntax:
+ save_
+ ^
