@@ -5,6 +5,9 @@ cod-tools (unreleased)
       - the neighbour_list_from_cif() subroutine.
     - COD::CIF::Data::AtomList:
       - determining atom oxidation states.
+  * Fixed:
+    - codcif:
+      - preserving empty save frames.
 
 cod-tools (3.0.1)
 
